# python-project-lvl4

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status.json
task_manager/statuses/migrations/: 0001_initial.py  0002_status_date_created.py  0003_alter_status_date_created.py  0004_alter_status_date_created.py  0005_alter_status_date_created.py  0006_alter_status_date_created.py  0007_alter_status_date_created.py  0008_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_author_alter_task_executor.py  0003_alter_task_executor.py  0003_tasklabels_task_label_tasklabels_task.py  0004_rename_label_task_labels.py
task_manager/templates/: index.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_list.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_list.html
task_manager/templates/task_manager/: index.html  nav.html
task_manager/templates/tasks/: task_create.html  (+4 more)
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+9 files in other folders)
